WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
16339
Frame scrollbar positions are not updated on page scroll
https://bugs.webkit.org/show_bug.cgi?id=16339
Summary
Frame scrollbar positions are not updated on page scroll
Tomas Rimkus
Reported
2007-12-07 03:44:21 PST
The chatbox scrollbar is detached from its position when scrolling down the page. I am currently using webkit
r28388
. I set priority to P1, because I don't remember having this issue with webkit, which I had downloaded from svn at 2007.10.21 (sorry, can't say for sure, which version it was). Webkit Qt doesn't have this problem. Here is a screenshot, where the bug is clearly visible:
http://img100.imageshack.us/img100/6501/shdd7.png
Attachments
Test case
(1.38 KB, text/html)
2008-02-19 07:29 PST
,
Pierre-Luc Beaudoin
no flags
Details
Add a missing const so that ScrollViewScrollbar::geometryChanged() is called instead of Widget::geometryChanged()
(1.66 KB, patch)
2008-03-18 08:21 PDT
,
Marco Barisione
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alp Toker
Comment 1
2007-12-20 13:40:27 PST
This is a very old bug that nobody's got round to fixing yet. It's due to the slightly messy code in ScrollViewGtk and/or the platform scrollbar impl.
Pierre-Luc Beaudoin
Comment 2
2008-02-19 07:29:01 PST
Created
attachment 19208
[details]
Test case This bug only affects iframe's scrollbars. This demo file has the two types of scrollbar we could encounter in a page (that I know). Only the iframe is affected. To see the bug with this file, your browser needs to be less than 500px high.
Marco Barisione
Comment 3
2008-03-18 08:21:31 PDT
Created
attachment 19864
[details]
Add a missing const so that ScrollViewScrollbar::geometryChanged() is called instead of Widget::geometryChanged()
Darin Adler
Comment 4
2008-03-18 08:31:48 PDT
Comment on
attachment 19864
[details]
Add a missing const so that ScrollViewScrollbar::geometryChanged() is called instead of Widget::geometryChanged() r=me
Pierre-Luc Beaudoin
Comment 5
2008-03-18 09:09:12 PDT
This patch has a side effect: While the scrollbar is correctly moved when scrolling, the iframe's content is not correctly repainted on
http://www.sharemanija.net
. In details, the content is not redrawn, but if you select the content of the iframe you seen that the content has moved... I suggest waiting a little before committing it.
Pierre-Luc Beaudoin
Comment 6
2008-03-19 08:00:24 PDT
(In reply to
comment #5
)
> This patch has a side effect:
Ok, this is totally unrelated to the fix, I can reproduce the issue with and without the patch. See
Bug #17949
.
Maciej Stachowiak
Comment 7
2008-03-22 00:49:46 PDT
***
Bug 17342
has been marked as a duplicate of this bug. ***
Mark Rowe (bdash)
Comment 8
2008-03-22 15:22:09 PDT
Landed in
r31235
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug