2008-03-22  Marco Barisione  <marco.barisione@collabora.co.uk>

Reviewed by Darin Adler.

        http://bugs.webkit.org/show_bug.cgi?id=16339
        Frame scrollbar positions are not updated on page scroll

        Widget::geometryChanged() was called instead of
        ScrollViewScrollbar::geometryChanged() because of a missing const.

        * platform/gtk/ScrollViewGtk.cpp:
        (WebCore::ScrollViewScrollbar::geometryChanged): add the missing
        const.


Canonical link: https://commits.webkit.org/24914@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@31235 268f45cc-cd09-0410-ab3c-d52691b4dbfc